# edge_detection_vr

./: COMPLETION_CHECKLIST.md  PUSH_TO_GITHUB_GUIDE.md  QUICK_START.md  README.md  SUBMISSION_SUMMARY.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/edgedetection/: CameraManager.java  MainActivity.java  OpenGLSurfaceView.java
edge_detection_vr.git/: config
gl/: GLRenderer.java  ImageProcessor.java
jni/: CMakeLists.txt  ImageProcessor.cpp
web/: index.html  index.js  package.json  styles.css  tsconfig.json
